Initial work on FileDeleteEndpoint
