# helix/lib/game/webserver/spec.ex
@@ -28,6 +28,10 @@ defmodule Game.Webserver.Spec do
         path: "/v1/server/{nip}/login/{target_nip}",
         responses: [200]
       },
+      {Endpoint.File.Delete, :post} => %{
+        path: "/v1/server/{nip}/file/{file_id}/delete",
+        responses: [200]
+      },
       {Endpoint.File.Install, :post} => %{
         path: "/v1/server/{nip}/file/{file_id}/install",
         responses: [200]
