# helix/priv/openapi/game.yaml
@@ -4,6 +4,17 @@ info:
   title: Game API
 components:
   responses:
+    FileDeleteOkResponse:
+      description: TODO description
+      content:
+        application/json:
+          schema:
+            type: object
+            required:
+              - data
+            properties:
+              data:
+                $ref: '#/components/schemas/FileDeleteOutput'
     FileInstallOkResponse:
       description: TODO description
       content:
@@ -63,6 +74,13 @@ components:
               data:
                 $ref: '#/components/schemas/ServerLoginOutput'
   requestBodies:
+    FileDeleteRequest:
+      description: TODO description
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/FileDeleteInput'
     FileInstallRequest:
       description: TODO description
       required: true
@@ -85,6 +103,16 @@ components:
           schema:
             $ref: '#/components/schemas/ServerLoginInput'
   schemas:
+    FileDeleteInput:
+      type: object
+      required: []
+      properties:
+        tunnel_id:
+          type: integer
+    FileDeleteOutput:
+      type: object
+      required: []
+      properties: {}
     FileInstallInput:
       type: object
       required: []
@@ -149,6 +177,29 @@ paths:
       operationId: PlayerSync
       requestBody:
         $ref: '#/components/requestBodies/PlayerSyncRequest'
+  /v1/server/{nip}/file/{file_id}/delete:
+    post:
+      parameters:
+        - in: path
+          name: nip
+          description: ''
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: file_id
+          description: ''
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          $ref: '#/components/responses/FileDeleteOkResponse'
+      security:
+        - AuthorizationToken: []
+      operationId: FileDelete
+      requestBody:
+        $ref: '#/components/requestBodies/FileDeleteRequest'
   /v1/server/{nip}/file/{file_id}/install:
     post:
       parameters:
